<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myToDo</string>
    <string name="unfinished">未完成</string>
    <string name="finished">已完成</string>
    <string name="all">全部</string>
    <string name="sort">排序</string>
    <string name="action_add_todo">添加ToDo</string>
    <string name="action_search_todo">搜索ToDo</string>
    <string name="title_activity_add_to_do">添加ToDo</string>
    <string name="action_save_todo">保存ToDo</string>
    <string name="text_color">文字颜色：</string>
    <string name="background_color">背景颜色：</string>
    <string name="new_todo_content_input_hint">请输入内容</string>
    <string name="text_color_black">黑</string>
    <string name="text_color_red">红</string>
    <string name="text_color_green">绿</string>
    <string name="text_color_blue">蓝</string>
    <string name="background_color_yellow">黄</string>
    <string name="background_color_orange">橙</string>
    <string name="background_color_red">红</string>
    <string name="background_color_green">绿</string>
    <string name="background_color_blue">蓝</string>
    <string name="title_activity_to_do">ToDo详情</string>
    <string name="action_add_memo">添加Memo</string>
    <string name="action_alert">提醒</string>
    <string name="todo_digest">todo摘要</string>
    <string name="text_colon">:</string>

</resources>
