<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.gutspot.apps.android.mytodo.MemoActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/layout_text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_color"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_text_color_black"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#000000"
            android:contentDescription="@string/text_color_black" />

        <ImageButton
            android:id="@+id/button_text_color_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#ee0000"
            android:contentDescription="@string/text_color_red" />

        <ImageButton
            android:id="@+id/button_text_color_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#008800"
            android:contentDescription="@string/text_color_green" />

        <ImageButton
            android:id="@+id/button_text_color_blue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#0000ff"
            android:contentDescription="@string/text_color_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_color"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_background_color_yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#f4e0a5"
            android:contentDescription="@string/background_color_yellow" />

        <ImageButton
            android:id="@+id/button_background_color_orage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#f1d0a6"
            android:contentDescription="@string/background_color_orange" />

        <ImageButton
            android:id="@+id/button_background_color_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#ecd0ca"
            android:contentDescription="@string/background_color_red" />

        <ImageButton
            android:id="@+id/button_background_color_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#dde3ba"
            android:contentDescription="@string/background_color_green" />

        <ImageButton
            android:id="@+id/button_background_color_blue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#d0dce3"
            android:contentDescription="@string/background_color_blue" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_background_color"
        android:gravity="top|left"
        android:hint="@string/new_todo_content_input_hint"
        android:padding="5dp"
        android:scrollHorizontally="false"
        android:textSize="20sp" />

</RelativeLayout>